# alany

./: .flake8  .gitignore  README 2.md  README.md  __main__.py  compiler.py  main.py  memory.py  pyproject.toml  requirements.txt  setup.py  std.aln  test.alon
alany/: __init__.py  __main__.py  compiler.py  datatypes.py  error.py  functions.py  interpreter.py  main.py  memory.py  namespace.py  node.py  parse.py  parser.py  result.py
alany/alanybyte/: main.py
alany/cli/: alany.py  esobyte.py  main.py  pia.py
alany/esobyte/: compiler.py
alany/examples/: args.aln  binary_search.aln  donut.aln_dontwork  import_2.aln  none.aln  python.aln  return.aln
alany/pia/: main.py  setup.py
alany/pia/lists/: libs.txt
alany/std/: main.aln  pygame.aln  random.aln  std.aln  test.aln
cli/: alany.py  esobyte.py
esobyte/: __init__.py  compiler.py
esobyte/examples/: calc.eso  fib.eso
examples/: aln_numbers_1.aln  aln_numbers_2.aln  append.aln  args.aln  array.al  array.aln  binary_search.al  binary_search.aln  bool.aln  bubble_sort.aln  class.aln  donut.al_dontwork  empty_array.aln  fibonacci.aln  file.aln  float.aln  fun.aln  helloworld.al  helloworld.aln  import.aln  import_2.aln  local.aln  none.al  object.aln  paln.aln  pong.aln  python.al  python.paln  remainder_of_division.aln  rule_110.aln  runtime_not_a_number.al  runtime_not_a_number.aln  space.aln  std_test.aln  test.aln  text.aln  type.aln  while.al  x1b.aln
quite/: quitebit.py  quitebit_system.py
scripts/macos/: setup_alany.py
std/: arrays.aln  io.aln  pygame.aln
