[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alany"
authors = [{name = "Vlad100"}]
readme = "README.md"
requires-python = ">=3.7"
description = "Programming language for creating bots in AnonyGram and other programs."
version = "0.1.2"
dependencies = [
    "click", 
    "click_default_group", 
    "gitpython",
    "pygame"
]

[project.urls]
Home = "https://github.com/anony-oss/alany"

[project.scripts]
alany = "alany.__main__:main"